--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
     appearance: none;
     padding-right: 25px;
     /* background: url("https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-ios7-arrow-down-16.png") no-repeat scroll right center transparent; */
-    background: url("../images/arrow-down-16.webp") no-repeat scroll right center transparent;
+    background: url("../images/arrow_drop_down.png") no-repeat scroll right center transparent;
   }
 
   .fa-dot-circle-o {
