--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,22 @@ body {
     -moz-appearance: none;
     appearance: none;
     padding-right: 25px;
-    /* background: url("https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-ios7-arrow-down-16.png") no-repeat scroll right center transparent; */
     background: url("../images/arrow_drop_down.webp") no-repeat scroll right center transparent;
   }
 
   .mb-5-custom {
     margin-bottom: 60px !important;
+  }
+
+  #tooltip {
+    z-index: 9999;
+	position: absolute;
+	display: none;
+	top:0px;
+	left:0px;
+	background-color: #000;
+	padding: 5px 10px 5px 10px;
+	color: white;
+	opacity: 0.6;
+	border-radius: 5px; 
   }
