--- a/css/style.css
+++ b/css/style.css
@@ -20,15 +20,15 @@ body {
     margin-bottom: 60px !important;
   }
 
-  #tooltip {
+  #tooltip_toggle {
     z-index: 9999;
-	position: absolute;
-	display: none;
-	top:0px;
-	left:0px;
-	background-color: #000;
-	padding: 5px 10px 5px 10px;
-	color: white;
-	opacity: 0.6;
-	border-radius: 5px; 
+    position: absolute;
+    display: none;
+    top:0px;
+    left:0px;
+    background-color: #000;
+    padding: 5px 10px 5px 10px;
+    color: white;
+    opacity: 0.6;
+    border-radius: 5px; 
   }
